Extracted layer with highest conceptual sens

--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -6,7 +6,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<contextlib.ExitStack at 0x1c3e99b4640>"
+      "text/plain": "<contextlib.ExitStack at 0x22fea416d60>"
      },
      "execution_count": 1,
      "metadata": {},
@@ -174,21 +174,13 @@
      "text": [
       "Loaded inception model.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\git\\COMP-5900\\venv\\lib\\site-packages\\torchvision\\models\\googlenet.py:339: UserWarning: auxiliary heads in the pretrained googlenet model are NOT pretrained, so make sure to train them\n",
-      "  warnings.warn(\n"
-     ]
     }
    ],
    "source": [
     "# Preliminary work for setting up the model.\n",
     "\n",
     "# Preparing the Googlenet model.\n",
-    "model = torchvision.models.googlenet(weights=torchvision.models.GoogLeNet_Weights.DEFAULT, aux_logits=True)\n",
+    "model = torchvision.models.googlenet(weights=torchvision.models.GoogLeNet_Weights.DEFAULT)\n",
     "\n",
     "# This is for testing\n",
     "if os.path.exists(BASELINE_MODEL_PATH):\n",
@@ -253,8 +245,8 @@
     "num_ftrs = model.fc.in_features\n",
     "# Here the size of each output sample is set to nn.Linear(num_ftrs, len(class_names)).\n",
     "model.fc = nn.Linear(num_ftrs, len(class_names))\n",
-    "model.aux1.fc2 = nn.Linear(1024, len(class_names))\n",
-    "model.aux2.fc2 = nn.Linear(1024, len(class_names))\n",
+    "# model.aux1.fc2 = nn.Linear(1024, len(class_names))\n",
+    "# model.aux2.fc2 = nn.Linear(1024, len(class_names))\n",
     "# Send the fine-tuned model to the device we are working with.\n",
     "model_ft = model.to(device)\n",
     "\n",
@@ -302,10 +294,54 @@
     "\n",
     "# Get the key of the concept to be used for training.\n",
     "# TODO: Generalize this to multiple sets\n",
-    "concept_key = ts.get_concept_keys(experimental_set=random_experimental_sets[0])\n",
+    "concept_key = ts.get_concept_keys(experimental_set=experimental_sets[0])\n",
+    "target_concept_index = [item.name for item in experimental_sets[0]].index(TARGET_CONCEPT)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\git\\COMP-5900\\venv\\lib\\site-packages\\captum\\concept\\_utils\\classifier.py:130: UserWarning: Using default classifier for TCAV which keeps input both train and test datasets in the memory. Consider defining your own classifier that doesn't rely heavily on memory, for large number of concepts, by extending `Classifer` abstract class\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Here we want to select the layer with the highest conceptual sensitivity, pre fine-tuning of the model\n",
+    "\n",
+    "# Load sample images from folder\n",
+    "path = os.path.join(DATA_DIR, 'val')\n",
+    "target_class_images = ds.load_image_tensors(TARGET_CLASS, root_path=path, transform=False)\n",
+    "target_class_tensors = torch.stack([ds.transform(img) for img in target_class_images])\n",
+    "model.to(\"cpu\")\n",
+    "\n",
+    "# Extract the layer with the highest sensitivity to the concept\n",
+    "layer_highest_sensitivity = ts.extract_highest_sensitivity_layer(mytcav, experimental_sets, target_class_tensors,\n",
+    "                                                                 target_class_idx, layers, target_concept_index,\n",
+    "                                                                 concept_key)\n",
+    "\n",
+    "# Now redefine the tcav model to only consider this layer\n",
+    "mytcav = TCAV(model=model_ft,\n",
+    "              layers=[layer_highest_sensitivity],\n",
+    "              layer_attr_method = LayerIntegratedGradients(\n",
+    "                model, None, multiply_by_inputs=False))\n",
+    "\n",
+    "# Send the model back to the GPU\n",
+    "model.to(device=device)\n",
     "\n",
     "# Create the conceptual loss class.\n",
-    "conceptual_loss = ts.ConceptualLoss(criterion=criterion_CL, tcav_model=mytcav, experimental_sets=random_experimental_sets,\n",
+    "conceptual_loss = ts.ConceptualLoss(criterion=criterion_CL, tcav_model=mytcav, experimental_sets=experimental_sets,\n",
     "                                    target_concept_name=TARGET_CONCEPT, target_class_name=TARGET_CLASS,\n",
     "                                    target_class_index=target_class_idx, concept_key=concept_key, weight_coeff=CONCEPUTAL_LOSS_WEIGHT)"
    ],
