--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -6,7 +6,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<contextlib.ExitStack at 0x22fea416d60>"
+      "text/plain": "<contextlib.ExitStack at 0x2a3a58fa5e0>"
      },
      "execution_count": 1,
      "metadata": {},
@@ -187,7 +187,6 @@
     "    model = model.load_state_dict(torch.load(BASELINE_MODEL_PATH))\n",
     "\n",
     "# Send model to the device we are using.\n",
-    "model.to(device=device)\n",
     "print(\"Loaded inception model.\")"
    ],
    "metadata": {
@@ -200,9 +199,38 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\git\\COMP-5900\\venv\\lib\\site-packages\\captum\\concept\\_utils\\classifier.py:130: UserWarning: Using default classifier for TCAV which keeps input both train and test datasets in the memory. Consider defining your own classifier that doesn't rely heavily on memory, for large number of concepts, by extending `Classifer` abstract class\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn [5], line 35\u001B[0m\n\u001B[0;32m     29\u001B[0m mytcav \u001B[38;5;241m=\u001B[39m TCAV(model\u001B[38;5;241m=\u001B[39mmodel,\n\u001B[0;32m     30\u001B[0m               layers\u001B[38;5;241m=\u001B[39mlayers,\n\u001B[0;32m     31\u001B[0m               layer_attr_method \u001B[38;5;241m=\u001B[39m LayerIntegratedGradients(\n\u001B[0;32m     32\u001B[0m                 model, \u001B[38;5;28;01mNone\u001B[39;00m, multiply_by_inputs\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m))\n\u001B[0;32m     34\u001B[0m \u001B[38;5;66;03m# Extract the layer with the highest sensitivity to the concept\u001B[39;00m\n\u001B[1;32m---> 35\u001B[0m layer_highest_sensitivity \u001B[38;5;241m=\u001B[39m \u001B[43mts\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mextract_highest_sensitivity_layer\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmytcav\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mexperimental_sets\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtarget_class_tensors\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     36\u001B[0m \u001B[43m                                                                 \u001B[49m\u001B[43mtarget_class_idx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlayers\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtarget_concept_index\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     37\u001B[0m \u001B[43m                                                                 \u001B[49m\u001B[43mconcept_key\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mD:\\git\\COMP-5900\\Project\\SupportClasses\\TCAV_support.py:69\u001B[0m, in \u001B[0;36mextract_highest_sensitivity_layer\u001B[1;34m(tcav_model, experimental_sets, target_class_tensors, target_class_idx, layers, target_concept_index, concept_key)\u001B[0m\n\u001B[0;32m     63\u001B[0m tcav_scores \u001B[38;5;241m=\u001B[39m tcav_model\u001B[38;5;241m.\u001B[39minterpret(inputs\u001B[38;5;241m=\u001B[39mtarget_class_tensors,\n\u001B[0;32m     64\u001B[0m                                         experimental_sets\u001B[38;5;241m=\u001B[39mexperimental_sets,\n\u001B[0;32m     65\u001B[0m                                         target\u001B[38;5;241m=\u001B[39mtarget_class_idx,\n\u001B[0;32m     66\u001B[0m                                         n_steps\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m5\u001B[39m)\n\u001B[0;32m     67\u001B[0m sens_scores \u001B[38;5;241m=\u001B[39m [\u001B[38;5;28mabs\u001B[39m(format_float(scores[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124msign_count\u001B[39m\u001B[38;5;124m'\u001B[39m][target_concept_index])) \u001B[38;5;28;01mfor\u001B[39;00m layer, scores \u001B[38;5;129;01min\u001B[39;00m\n\u001B[0;32m     68\u001B[0m                tcav_scores[concept_key]\u001B[38;5;241m.\u001B[39mitems()]\n\u001B[1;32m---> 69\u001B[0m temp \u001B[38;5;241m=\u001B[39m [index \u001B[38;5;28;01mfor\u001B[39;00m index, score \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(sens_scores) \u001B[38;5;28;01mif\u001B[39;00m score \u001B[38;5;241m==\u001B[39m \u001B[38;5;28mmax\u001B[39m(sens_scores)][\u001B[38;5;241m0\u001B[39m]\n\u001B[0;32m     70\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m layers[temp]\n",
+      "File \u001B[1;32mD:\\git\\COMP-5900\\Project\\SupportClasses\\TCAV_support.py:69\u001B[0m, in \u001B[0;36mextract_highest_sensitivity_layer\u001B[1;34m(tcav_model, experimental_sets, target_class_tensors, target_class_idx, layers, target_concept_index, concept_key)\u001B[0m\n\u001B[0;32m     63\u001B[0m tcav_scores \u001B[38;5;241m=\u001B[39m tcav_model\u001B[38;5;241m.\u001B[39minterpret(inputs\u001B[38;5;241m=\u001B[39mtarget_class_tensors,\n\u001B[0;32m     64\u001B[0m                                         experimental_sets\u001B[38;5;241m=\u001B[39mexperimental_sets,\n\u001B[0;32m     65\u001B[0m                                         target\u001B[38;5;241m=\u001B[39mtarget_class_idx,\n\u001B[0;32m     66\u001B[0m                                         n_steps\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m5\u001B[39m)\n\u001B[0;32m     67\u001B[0m sens_scores \u001B[38;5;241m=\u001B[39m [\u001B[38;5;28mabs\u001B[39m(format_float(scores[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124msign_count\u001B[39m\u001B[38;5;124m'\u001B[39m][target_concept_index])) \u001B[38;5;28;01mfor\u001B[39;00m layer, scores \u001B[38;5;129;01min\u001B[39;00m\n\u001B[0;32m     68\u001B[0m                tcav_scores[concept_key]\u001B[38;5;241m.\u001B[39mitems()]\n\u001B[1;32m---> 69\u001B[0m temp \u001B[38;5;241m=\u001B[39m [index \u001B[38;5;28;01mfor\u001B[39;00m index, score \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(sens_scores) \u001B[38;5;28;01mif\u001B[39;00m score \u001B[38;5;241m==\u001B[39m \u001B[38;5;28mmax\u001B[39m(sens_scores)][\u001B[38;5;241m0\u001B[39m]\n\u001B[0;32m     70\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m layers[temp]\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx:1179\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.SafeCallWrapper.__call__\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx:620\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx:1095\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx:1057\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx:317\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.do_wait_suspend\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32mD:\\Programs\\JetBrains\\PyCharm 2020.3.3\\plugins\\python\\helpers\\pydev\\pydevd.py:1141\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[0;32m   1138\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[0;32m   1140\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[1;32m-> 1141\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mD:\\Programs\\JetBrains\\PyCharm 2020.3.3\\plugins\\python\\helpers\\pydev\\pydevd.py:1156\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[0;32m   1153\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[0;32m   1155\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[1;32m-> 1156\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1158\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[0;32m   1160\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
-    "# Preliminary work for setting up concepts.\n",
+    "# Preliminary work for setting up concepts and the TCAV.\n",
     "\n",
     "# Selected concepts.\n",
     "stripes_concept = ds.assemble_concept(\"striped\", 0, concepts_path=CONCEPTS_PATH)\n",
@@ -216,7 +244,27 @@
     "experimental_sets = [[stripes_concept, zigzagged_concept, dotted_concept]]\n",
     "\n",
     "# Select the layers for interpretation.\n",
-    "layers=['inception4c', 'inception4d', 'inception4e']"
+    "layers=['inception4c', 'inception4d', 'inception4e']\n",
+    "\n",
+    "# Get the concept key and target concept index\n",
+    "concept_key = ts.get_concept_keys(experimental_set=experimental_sets[0])\n",
+    "target_concept_index = [item.name for item in experimental_sets[0]].index(TARGET_CONCEPT)\n",
+    "\n",
+    "# Load sample images from folder\n",
+    "path = os.path.join(DATA_DIR, 'val')\n",
+    "target_class_images = ds.load_image_tensors(TARGET_CLASS, root_path=path, transform=False)\n",
+    "target_class_tensors = torch.stack([ds.transform(img) for img in target_class_images])\n",
+    "\n",
+    "# Define the TCAV on the original model\n",
+    "mytcav = TCAV(model=model,\n",
+    "              layers=layers,\n",
+    "              layer_attr_method = LayerIntegratedGradients(\n",
+    "                model, None, multiply_by_inputs=False))\n",
+    "\n",
+    "# Here we want to select the layer with the highest conceptual sensitivity, pre fine-tuning of the model\n",
+    "layer_highest_sensitivity = ts.extract_highest_sensitivity_layer(mytcav, experimental_sets, target_class_tensors,\n",
+    "                                                                 target_class_idx, layers, target_concept_index,\n",
+    "                                                                 concept_key)"
    ],
    "metadata": {
     "collapsed": false,
@@ -283,62 +331,14 @@
    "source": [
     "# Additional Hyper-parameters for including the conceptual loss.\n",
     "\n",
-    "# Defining the TCAV model and which layers we intend to consider.\n",
-    "mytcav = TCAV(model=model_ft,\n",
-    "              layers=layers,\n",
-    "              layer_attr_method = LayerIntegratedGradients(\n",
-    "                model, None, multiply_by_inputs=False))\n",
-    "\n",
-    "# Loss term.\n",
-    "criterion_CL = nn.BCELoss(weight=CONCEPUTAL_LOSS_WEIGHT*torch.ones(len(layers)))\n",
-    "\n",
-    "# Get the key of the concept to be used for training.\n",
-    "# TODO: Generalize this to multiple sets\n",
-    "concept_key = ts.get_concept_keys(experimental_set=experimental_sets[0])\n",
-    "target_concept_index = [item.name for item in experimental_sets[0]].index(TARGET_CONCEPT)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\git\\COMP-5900\\venv\\lib\\site-packages\\captum\\concept\\_utils\\classifier.py:130: UserWarning: Using default classifier for TCAV which keeps input both train and test datasets in the memory. Consider defining your own classifier that doesn't rely heavily on memory, for large number of concepts, by extending `Classifer` abstract class\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Here we want to select the layer with the highest conceptual sensitivity, pre fine-tuning of the model\n",
-    "\n",
-    "# Load sample images from folder\n",
-    "path = os.path.join(DATA_DIR, 'val')\n",
-    "target_class_images = ds.load_image_tensors(TARGET_CLASS, root_path=path, transform=False)\n",
-    "target_class_tensors = torch.stack([ds.transform(img) for img in target_class_images])\n",
-    "model.to(\"cpu\")\n",
-    "\n",
-    "# Extract the layer with the highest sensitivity to the concept\n",
-    "layer_highest_sensitivity = ts.extract_highest_sensitivity_layer(mytcav, experimental_sets, target_class_tensors,\n",
-    "                                                                 target_class_idx, layers, target_concept_index,\n",
-    "                                                                 concept_key)\n",
-    "\n",
-    "# Now redefine the tcav model to only consider this layer\n",
+    "# Defining the TCAV model on the layer we intend to consider.\n",
     "mytcav = TCAV(model=model_ft,\n",
     "              layers=[layer_highest_sensitivity],\n",
     "              layer_attr_method = LayerIntegratedGradients(\n",
     "                model, None, multiply_by_inputs=False))\n",
     "\n",
-    "# Send the model back to the GPU\n",
-    "model.to(device=device)\n",
+    "# Loss term.\n",
+    "criterion_CL = nn.BCELoss(weight=CONCEPUTAL_LOSS_WEIGHT*torch.ones(len(layers)))\n",
     "\n",
     "# Create the conceptual loss class.\n",
     "conceptual_loss = ts.ConceptualLoss(criterion=criterion_CL, tcav_model=mytcav, experimental_sets=experimental_sets,\n",
