--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -6,7 +6,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<contextlib.ExitStack at 0x2135458a5e0>"
+      "text/plain": "<contextlib.ExitStack at 0x2ad0eb36640>"
      },
      "execution_count": 1,
      "metadata": {},
@@ -309,7 +309,7 @@
     "                model_ft, None, multiply_by_inputs=False))\n",
     "\n",
     "# Loss term.\n",
-    "criterion_CL = nn.BCELoss(weight=CONCEPUTAL_LOSS_WEIGHT*torch.ones(1))\n",
+    "criterion_CL = nn.L1Loss()\n",
     "\n",
     "# Create the conceptual loss class.\n",
     "conceptual_loss = ts.ConceptualLoss(criterion=criterion_CL, tcav_model=mytcav, experimental_sets=experimental_sets,\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -334,32 +334,16 @@
       "------------------------Training Baseline Model------------------------\n",
       "Epoch 0/4\n",
       "----------\n",
-      "train Loss: 1.4240 | Acc: 65.45%\n",
-      "val Loss: 0.3139 | Acc: 95.82%\n",
+      "train Loss: 0.7400 | Acc: 63.67%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "Epoch 1/4\n",
-      "----------\n",
-      "train Loss: 0.9898 | Acc: 78.79%\n",
-      "val Loss: 0.1966 | Acc: 93.72%\n",
-      "\n",
-      "Epoch 2/4\n",
-      "----------\n",
-      "train Loss: 0.9620 | Acc: 79.39%\n",
-      "val Loss: 0.2498 | Acc: 89.96%\n",
-      "\n",
-      "Epoch 3/4\n",
-      "----------\n",
-      "train Loss: 0.8780 | Acc: 82.12%\n",
-      "val Loss: 0.1787 | Acc: 94.14%\n",
-      "\n",
-      "Epoch 4/4\n",
-      "----------\n",
-      "train Loss: 0.6707 | Acc: 87.27%\n",
-      "val Loss: 0.1689 | Acc: 94.56%\n",
-      "\n",
-      "Training complete in 0m 46s\n",
-      "Best val Acc: 95.815900\n",
-      "------------------------Done Training Baseline Model------------------------\n"
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -398,26 +382,15 @@
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "RuntimeError",
+     "evalue": "output with shape [] doesn't match the broadcast shape [1]",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[1;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
       "Cell \u001B[1;32mIn [8], line 10\u001B[0m\n\u001B[0;32m      7\u001B[0m model_ft\u001B[38;5;241m.\u001B[39mload_state_dict(torch\u001B[38;5;241m.\u001B[39mload(VANILLA_MODEL_PATH))\n\u001B[0;32m      9\u001B[0m \u001B[38;5;66;03m# Training the augmented model.\u001B[39;00m\n\u001B[1;32m---> 10\u001B[0m model_ft, loss_scores_conceptual, accuracy_scores_conceptual \u001B[38;5;241m=\u001B[39m \u001B[43mms\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtrain_model\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel_ft\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcriterion\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moptimizer_ft\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mexp_lr_scheduler\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdevice\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdevice\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdataloaders\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdataloaders\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     11\u001B[0m \u001B[43m                          \u001B[49m\u001B[43mdataset_sizes\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdataset_sizes\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnum_epochs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mNUM_OF_EPOCHS\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mconceptual_loss\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mconceptual_loss\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     13\u001B[0m \u001B[38;5;66;03m# Save the model\u001B[39;00m\n\u001B[0;32m     14\u001B[0m torch\u001B[38;5;241m.\u001B[39msave(model_ft\u001B[38;5;241m.\u001B[39mstate_dict(), CONCEPTUAL_MODEL_PATH)\n",
-      "File \u001B[1;32mD:\\git\\COMP-5900\\Project\\SupportClasses\\Model_support.py:78\u001B[0m, in \u001B[0;36mtrain_model\u001B[1;34m(model, criterion, optimizer, scheduler, device, dataloaders, dataset_sizes, num_epochs, conceptual_loss)\u001B[0m\n\u001B[0;32m     76\u001B[0m \u001B[38;5;66;03m# Add the conceptual loss if it is being used.\u001B[39;00m\n\u001B[0;32m     77\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m conceptual_loss \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m---> 78\u001B[0m     aux_loss \u001B[38;5;241m=\u001B[39m \u001B[43mconceptual_loss\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_conceptual_loss\u001B[49m\u001B[43m(\u001B[49m\u001B[43minputs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlabels\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     79\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m aux_loss \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m     80\u001B[0m         loss \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m aux_loss\n",
-      "File \u001B[1;32mD:\\git\\COMP-5900\\Project\\SupportClasses\\TCAV_support.py:56\u001B[0m, in \u001B[0;36mConceptualLoss.get_conceptual_loss\u001B[1;34m(self, inputs, labels)\u001B[0m\n\u001B[0;32m     53\u001B[0m \u001B[38;5;66;03m# Now let's calculate the conceptual sensitivity for members of this class in the training batch\u001B[39;00m\n\u001B[0;32m     54\u001B[0m target_tensor \u001B[38;5;241m=\u001B[39m stack([img \u001B[38;5;28;01mfor\u001B[39;00m img \u001B[38;5;129;01min\u001B[39;00m target_imgs])\n\u001B[1;32m---> 56\u001B[0m tcav_scores \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcompute_cosine_similarity\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtarget_tensor\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mn_steps\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m     58\u001B[0m \u001B[38;5;66;03m# This is for the target concept\u001B[39;00m\n\u001B[0;32m     59\u001B[0m val \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mtensor([\u001B[38;5;28mabs\u001B[39m(format_float(scores[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124msum_score\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtarget_concept_index])) \u001B[38;5;28;01mfor\u001B[39;00m layer, scores\n\u001B[0;32m     60\u001B[0m        \u001B[38;5;129;01min\u001B[39;00m tcav_scores[\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mconcept_key]\u001B[38;5;241m.\u001B[39mitems()])\n",
-      "File \u001B[1;32mD:\\git\\COMP-5900\\Project\\SupportClasses\\TCAV_support.py:155\u001B[0m, in \u001B[0;36mConceptualLoss.compute_cosine_similarity\u001B[1;34m(self, inputs, additional_forward_args, **kwargs)\u001B[0m\n\u001B[0;32m    147\u001B[0m         \u001B[38;5;28;01massert\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(cav_subset\u001B[38;5;241m.\u001B[39mshape) \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m3\u001B[39m, (\n\u001B[0;32m    148\u001B[0m             \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcav should have 3 dimensions: n_experiments x \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    149\u001B[0m             \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mn_concepts x n_features.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    150\u001B[0m         )\n\u001B[0;32m    152\u001B[0m         experimental_subset_sorted \u001B[38;5;241m=\u001B[39m experimental_sets_sorted[\n\u001B[0;32m    153\u001B[0m                                      exp_set_offsets[i]: exp_set_offsets[i \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m1\u001B[39m]\n\u001B[0;32m    154\u001B[0m                                      ]\n\u001B[1;32m--> 155\u001B[0m         \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcosine_similarity_subcomputation\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    156\u001B[0m \u001B[43m            \u001B[49m\u001B[43mscores\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    157\u001B[0m \u001B[43m            \u001B[49m\u001B[43mlayer\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    158\u001B[0m \u001B[43m            \u001B[49m\u001B[43mattribs\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    159\u001B[0m \u001B[43m            \u001B[49m\u001B[43mcav_subset\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    160\u001B[0m \u001B[43m            \u001B[49m\u001B[43mclasses_subset\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    161\u001B[0m \u001B[43m            \u001B[49m\u001B[43mexperimental_subset_sorted\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    162\u001B[0m \u001B[43m        \u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    163\u001B[0m         i \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m    165\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m scores\n",
-      "File \u001B[1;32mD:\\git\\COMP-5900\\Project\\SupportClasses\\TCAV_support.py:189\u001B[0m, in \u001B[0;36mConceptualLoss.cosine_similarity_subcomputation\u001B[1;34m(self, scores, layer, attribs, cavs, classes, experimental_sets)\u001B[0m\n\u001B[0;32m    186\u001B[0m sum_score \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39msum(ones_like(cos_sim) \u001B[38;5;241m-\u001B[39m cos_sim, dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m    188\u001B[0m \u001B[38;5;66;03m# This is our change, instead of computing the mean, we take the sum.\u001B[39;00m\n\u001B[1;32m--> 189\u001B[0m magnitude_score \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mmean(cos_sim, dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m    191\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i, (cls_set, concepts) \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(\u001B[38;5;28mzip\u001B[39m(classes, experimental_sets)):\n\u001B[0;32m    192\u001B[0m     concepts_key \u001B[38;5;241m=\u001B[39m concepts_to_str(concepts)\n",
-      "File \u001B[1;32mD:\\git\\COMP-5900\\Project\\SupportClasses\\TCAV_support.py:189\u001B[0m, in \u001B[0;36mConceptualLoss.cosine_similarity_subcomputation\u001B[1;34m(self, scores, layer, attribs, cavs, classes, experimental_sets)\u001B[0m\n\u001B[0;32m    186\u001B[0m sum_score \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39msum(ones_like(cos_sim) \u001B[38;5;241m-\u001B[39m cos_sim, dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m    188\u001B[0m \u001B[38;5;66;03m# This is our change, instead of computing the mean, we take the sum.\u001B[39;00m\n\u001B[1;32m--> 189\u001B[0m magnitude_score \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mmean(cos_sim, dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m    191\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i, (cls_set, concepts) \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(\u001B[38;5;28mzip\u001B[39m(classes, experimental_sets)):\n\u001B[0;32m    192\u001B[0m     concepts_key \u001B[38;5;241m=\u001B[39m concepts_to_str(concepts)\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx:1179\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.SafeCallWrapper.__call__\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx:620\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx:1095\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx:1057\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx:317\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.do_wait_suspend\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32mD:\\Programs\\JetBrains\\PyCharm 2020.3.3\\plugins\\python\\helpers\\pydev\\pydevd.py:1141\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[0;32m   1138\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[0;32m   1140\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[1;32m-> 1141\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mD:\\Programs\\JetBrains\\PyCharm 2020.3.3\\plugins\\python\\helpers\\pydev\\pydevd.py:1156\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[0;32m   1153\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[0;32m   1155\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[1;32m-> 1156\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1158\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[0;32m   1160\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+      "File \u001B[1;32mD:\\git\\COMP-5900\\Project\\SupportClasses\\Model_support.py:80\u001B[0m, in \u001B[0;36mtrain_model\u001B[1;34m(model, criterion, optimizer, scheduler, device, dataloaders, dataset_sizes, num_epochs, conceptual_loss)\u001B[0m\n\u001B[0;32m     78\u001B[0m     aux_loss \u001B[38;5;241m=\u001B[39m conceptual_loss\u001B[38;5;241m.\u001B[39mget_conceptual_loss(inputs, labels)\n\u001B[0;32m     79\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m aux_loss \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m---> 80\u001B[0m         loss \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m aux_loss\n\u001B[0;32m     81\u001B[0m         running_conceptual_loss \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m aux_loss\u001B[38;5;241m.\u001B[39mitem()\n\u001B[0;32m     83\u001B[0m \u001B[38;5;66;03m# backward + optimize only if in training phase\u001B[39;00m\n",
+      "\u001B[1;31mRuntimeError\u001B[0m: output with shape [] doesn't match the broadcast shape [1]"
      ]
     }
    ],
