--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -6,7 +6,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<contextlib.ExitStack at 0x2ad0eb36640>"
+      "text/plain": "<contextlib.ExitStack at 0x2622e687850>"
      },
      "execution_count": 1,
      "metadata": {},
@@ -57,7 +57,8 @@
     "# Modifiable Values\n",
     "TARGET_CONCEPT = \"striped\"\n",
     "TARGET_CLASS = \"zebra\"\n",
-    "CONCEPUTAL_LOSS_WEIGHT = 0.1\n",
+    "CONCEPUTAL_LOSS_WEIGHT = 1\n",
+    "AGREEMENT_THRESHOLD = 2     # This must on a scale of 0 to 1\n",
     "BASELINE_MODEL_PATH = 'baseline-model.pt'\n",
     "CONCEPTUAL_MODEL_PATH = 'conceptual-model.pt'\n",
     "VANILLA_MODEL_PATH = 'vanilla-model.pt'\n",
@@ -242,9 +243,10 @@
     "                model, None, multiply_by_inputs=False))\n",
     "\n",
     "# Here we want to select the layer with the highest conceptual sensitivity, pre fine-tuning of the model\n",
-    "layer_highest_sensitivity = ts.extract_highest_sensitivity_layer(mytcav, experimental_sets, target_class_tensors,\n",
-    "                                                                 target_class_idx, layers, target_concept_index,\n",
-    "                                                                 concept_key)"
+    "layer_highest_sensitivity = layers[1]\n",
+    "    # ts.extract_highest_sensitivity_layer(mytcav, experimental_sets, target_class_tensors,\n",
+    "    #                                                              target_class_idx, layers, target_concept_index,\n",
+    "    #                                                              concept_key)"
    ],
    "metadata": {
     "collapsed": false,
@@ -314,7 +316,8 @@
     "# Create the conceptual loss class.\n",
     "conceptual_loss = ts.ConceptualLoss(criterion=criterion_CL, tcav_model=mytcav, experimental_sets=experimental_sets,\n",
     "                                    target_concept_name=TARGET_CONCEPT, target_class_name=TARGET_CLASS,\n",
-    "                                    target_class_index=target_class_idx, concept_key=concept_key, weight_coeff=CONCEPUTAL_LOSS_WEIGHT)"
+    "                                    target_class_index=target_class_idx, concept_key=concept_key,\n",
+    "                                    weight_coeff=CONCEPUTAL_LOSS_WEIGHT, agreement_threshold=AGREEMENT_THRESHOLD)"
    ],
    "metadata": {
     "collapsed": false,
@@ -370,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
@@ -379,18 +382,6 @@
       "------------------------Training Augmented Model------------------------\n",
       "Epoch 0/4\n",
       "----------\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "output with shape [] doesn't match the broadcast shape [1]",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn [8], line 10\u001B[0m\n\u001B[0;32m      7\u001B[0m model_ft\u001B[38;5;241m.\u001B[39mload_state_dict(torch\u001B[38;5;241m.\u001B[39mload(VANILLA_MODEL_PATH))\n\u001B[0;32m      9\u001B[0m \u001B[38;5;66;03m# Training the augmented model.\u001B[39;00m\n\u001B[1;32m---> 10\u001B[0m model_ft, loss_scores_conceptual, accuracy_scores_conceptual \u001B[38;5;241m=\u001B[39m \u001B[43mms\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtrain_model\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel_ft\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcriterion\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moptimizer_ft\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mexp_lr_scheduler\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdevice\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdevice\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdataloaders\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdataloaders\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     11\u001B[0m \u001B[43m                          \u001B[49m\u001B[43mdataset_sizes\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdataset_sizes\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnum_epochs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mNUM_OF_EPOCHS\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mconceptual_loss\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mconceptual_loss\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     13\u001B[0m \u001B[38;5;66;03m# Save the model\u001B[39;00m\n\u001B[0;32m     14\u001B[0m torch\u001B[38;5;241m.\u001B[39msave(model_ft\u001B[38;5;241m.\u001B[39mstate_dict(), CONCEPTUAL_MODEL_PATH)\n",
-      "File \u001B[1;32mD:\\git\\COMP-5900\\Project\\SupportClasses\\Model_support.py:80\u001B[0m, in \u001B[0;36mtrain_model\u001B[1;34m(model, criterion, optimizer, scheduler, device, dataloaders, dataset_sizes, num_epochs, conceptual_loss)\u001B[0m\n\u001B[0;32m     78\u001B[0m     aux_loss \u001B[38;5;241m=\u001B[39m conceptual_loss\u001B[38;5;241m.\u001B[39mget_conceptual_loss(inputs, labels)\n\u001B[0;32m     79\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m aux_loss \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m---> 80\u001B[0m         loss \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m aux_loss\n\u001B[0;32m     81\u001B[0m         running_conceptual_loss \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m aux_loss\u001B[38;5;241m.\u001B[39mitem()\n\u001B[0;32m     83\u001B[0m \u001B[38;5;66;03m# backward + optimize only if in training phase\u001B[39;00m\n",
-      "\u001B[1;31mRuntimeError\u001B[0m: output with shape [] doesn't match the broadcast shape [1]"
      ]
     }
    ],
@@ -414,7 +405,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
